--- a/admin.ui/www/login.html
+++ b/admin.ui/www/login.html
@@ -23,6 +23,14 @@
         <script src="//cdn.bootcss.com/es5-shim/4.5.9/es5-sham.min.js"></script>
     <![endif]-->
     <link href="dist/styles.css" rel="stylesheet">
+    <script>
+        window.onerror = function name(err) {
+            console.log("---------------------", err);
+            if (err.indexOf("addEventListener") != -1 || err.indexOf("module") != -1) {
+                alert("你的浏览器太老了");
+            }
+        }
+    </script>
 </head>
 
 <body>
