--- a/admin.ui/www/index.html
+++ b/admin.ui/www/index.html
@@ -17,19 +17,21 @@
     <link href="assets/css/loading-bar.min.css" rel="stylesheet">
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--<link href="//cdn.bootcss.com/ng-img-crop/0.3.2/ng-img-crop.css" rel="stylesheet">-->
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <!--<link href="assets/css/style.min.css" rel="stylesheet">
     <link href="assets/icon/style.css" rel="stylesheet">
-    <link href="assets/css/add-ons.min.css" rel="stylesheet">
+    <link href="assets/css/add-ons.min.css" rel="stylesheet">-->
 
     <!--日历-->
     <link href="assets/css/jquery.datetimepicker.min.css" rel="stylesheet">
     <link href="assets/wangeditor/css/wangEditor.min.css" rel="stylesheet">
     <link href="assets/css/swiper.min.css" rel="stylesheet">
 
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="//cdn.bootcss.com/es5-shim/4.5.9/es5-shim.min.js"></script>
+        <script src="//cdn.bootcss.com/es5-shim/4.5.9/es5-sham.min.js"></script>
+        <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!--由 webpack 生成打包-->
     <link href="dist/styles.css" rel="stylesheet">
@@ -46,22 +48,15 @@
 
 <body>
     <!-- start: Header -->
-    <sam-Header style="position: fixed;top: 0;"></sam-Header>
+    <sam-Header></sam-Header>
     <!-- end: Header -->
-    <div class="container-fluid content">
-
-        <div class="row">
-            <!-- start: Main Menu -->
+    <div class="container-fluid container-body">
+        <div class="nav-letf col-xs-2">
             <sam-Main-Menu></sam-Main-Menu>
-            <!-- end: Main Menu -->
-            <!--<sam-Crumbs></sam-Crumbs>-->
-            <!--<div class="cromb">当前位置:系统>权限</div>-->
-            <!-- start: Content -->
-            <div class="main" ui-view=""></div>
-            <!-- end: Content -->
         </div>
-        <!--/container-->
-        <div class="clearfix"></div>
+        <div class="col-xs-10  col-xs-offset-2">
+            <div class="container-main" ui-view=""></div>
+        </div>
     </div>
     <!-- start: JavaScript-->
     <!--http://www.bootcdn.cn/?    cdn  网站-->
@@ -78,13 +73,13 @@
     <script src="assets/js/ngDialog.min.js"></script>
     <script src="assets/js/angular-cookies.min.js"></script>
 
-    <!--<script src="//cdn.bootcss.com/danialfarid-angular-file-upload/12.2.13/ng-file-upload.min.js"></script>
-    <script src="//cdn.bootcss.com/ng-img-crop/0.3.2/ng-img-crop.js"></script>-->
+    <script src="assets/js/ng-file-upload.min.js"></script>
+    <!--<script src="//cdn.bootcss.com/ng-img-crop/0.3.2/ng-img-crop.js"></script>-->
     <!--<script src="//cdn.bootcss.com/plupload/2.2.1/moxie.min.js"></script>-->
     <!--使用2.1.1版本，因为2.2.1版本会报找不到moxie的错误；另外也不用引入moxie.min.js文件-->
-    <!--<script src="//cdn.bootcss.com/plupload/2.1.1/plupload.full.min.js"></script>
-    <script src="//cdn.bootcss.com/wangeditor/2.1.20/js/wangEditor.min.js"></script>
-    <script src="//cdn.bootcss.com/qiniu-js/1.0.17.1/qiniu.min.js"></script>-->
+    <script src="assets/js/plupload.full.min.js"></script>
+    <!--<script src="//cdn.bootcss.com/wangeditor/2.1.20/js/wangEditor.min.js"></script>-->
+    <script src="//cdn.bootcss.com/qiniu-js/1.0.17.1/qiniu.min.js"></script>
     <!--图表-->
     <!--<script src="//cdn.bootcss.com/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="//cdn.bootcss.com/angular-chart.js/1.1.1/angular-chart.min.js"></script>-->
