--- a/admin.ui/www/login.html
+++ b/admin.ui/www/login.html
@@ -23,14 +23,6 @@
         <script src="//cdn.bootcss.com/es5-shim/4.5.9/es5-sham.min.js"></script>
     <![endif]-->
     <link href="dist/styles.css" rel="stylesheet">
-    <script>
-        window.onerror = function name(err) {
-            console.log("---------------------", err);
-            if (err.indexOf("addEventListener") != -1 || err.indexOf("module") != -1) {
-                alert("你的浏览器太老了");
-            }
-        }
-    </script>
 </head>
 
 <body>
@@ -113,6 +105,7 @@
     <script src="assets/js/ngDialog.min.js"></script>
     <script src="assets/js/zooming.min.js"></script>
     <script src="assets/js/angular-cookies.min.js"></script>
+    <script src="assets/js/ng-file-upload.min.js"></script>
     <script src="dist/app.js"></script>
 </body>
 
