--- a/admin.ui/www/directives/public/samMainMenu.tpl.html
+++ b/admin.ui/www/directives/public/samMainMenu.tpl.html
@@ -3,7 +3,7 @@
 
     <div class="sidebar-collapse">
         <div class="sidebar-header t-center">
-            <span><i class="fa icon-logo"></i><span>乐奉献后台管理系统</span></span>
+            <span><i class="fa icon-logo"></i><span>系统菜单</span></span>
         </div>
         <div class="sidebar-menu">
             <ul class="nav nav-sidebar">
