--- a/admin.ui/www/directives/public/samMainMenu.tpl.html
+++ b/admin.ui/www/directives/public/samMainMenu.tpl.html
@@ -2,8 +2,8 @@
     <!--sam-Main-Menu-->
 
     <div class="sidebar-collapse">
-        <div class="sidebar-header t-center">
-            <span><i class="fa icon-logo"></i><span>系统菜单</span></span>
+        <div class="sidebar-header text-center">
+            <span><i class="fa icon-logo"></i><span>Navigation</span></span>
         </div>
         <div class="sidebar-menu">
             <ul class="nav nav-sidebar">
