--- a/admin.ui/www/directives/public/samMenu.tpl.html
+++ b/admin.ui/www/directives/public/samMenu.tpl.html
@@ -1,7 +1,7 @@
 <li ui-sref-active="active">
     <a ng-if='t.MenuUrl&&t.Menus.length<=0' ui-sref="{{t.MenuUrl}}"><i class="fa fa-laptop"></i><span class="text" ng-bind="t.MenuName  "></span></a>
     <a ng-if='t.Menus.length>0' ng-click="vm.openedShow()" href="javascript:void(0)"><i class="fa fa-file-text"></i><span class="text" ng-bind="t.MenuName "></span> <span class="fa fa-angle-down pull-right"></span></a>
-    <ul class="nav sub" ng-if='t.Menus.length>0'>
+    <ul class="nav sub" ng-if='t.Menus.length>0' style="display: none">
         <sam-Menu templateurl="templates/directives/samMenu.html" ng-repeat="t in t.Menus"></sam-Menu>
     </ul>
 </li>
