--- a/admin.ui/www/index.html
+++ b/admin.ui/www/index.html
@@ -25,7 +25,7 @@
     <link href="assets/css/jquery.datetimepicker.min.css" rel="stylesheet">
     <link href="assets/wangeditor/css/wangEditor.min.css" rel="stylesheet">
     <link href="assets/css/swiper.min.css" rel="stylesheet">
-
+    <link href="assets/css/animate.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -49,14 +49,17 @@
 <body>
     <!-- start: Header -->
     <sam-Header></sam-Header>
+    <div class="nav-letf col-xs-2">
+        <sam-Main-Menu></sam-Main-Menu>
+    </div>
     <!-- end: Header -->
-    <div class="container-fluid container-body">
-        <div class="nav-letf col-xs-2">
-            <sam-Main-Menu></sam-Main-Menu>
+    <div class="container-body">
+        <div class="col-xs-10  col-xs-offset-2 container-main animated fadeIn" ng-if="$pageFinishedLoading">
+            <div ui-view=""></div>
         </div>
-        <div class="col-xs-10  col-xs-offset-2">
-            <div class="container-main" ui-view=""></div>
-        </div>
+    </div>
+    <div id="preloader" ng-show="!$pageFinishedLoading" class="">
+        <div></div>
     </div>
     <!-- start: JavaScript-->
     <!--http://www.bootcdn.cn/?    cdn  网站-->
@@ -81,6 +84,9 @@
     <!--<script src="//cdn.bootcss.com/wangeditor/2.1.20/js/wangEditor.min.js"></script>-->
     <script src="//cdn.bootcss.com/qiniu-js/1.0.17.1/qiniu.min.js"></script>
     <!--图表-->
+    <script src="assets/js/echarts.min.js"></script>
+    <script src="assets/js/echarts-wordcloud.min.js"></script>
+
     <!--<script src="//cdn.bootcss.com/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="//cdn.bootcss.com/angular-chart.js/1.1.1/angular-chart.min.js"></script>-->
     <!--这个cdn 加载 太不稳定-->
@@ -89,11 +95,6 @@
     <script src="assets/js/zooming.min.js"></script>
     <script src="assets/js/swiper.min.js"></script>
 
-    <!--百度 UEditor-->
-    <!--<script type="text/javascript" charset="utf-8" src="http://apps.bdimg.com/libs/ueditor/1.4.3.1/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="http://apps.bdimg.com/libs/ueditor/1.4.3.1/ueditor.all.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="http://apps.bdimg.com/libs/ueditor/1.4.3.1/lang/zh-cn/zh-cn.js"></script>-->
-    <!--百度 UEditor-->
 
     <script src="dist/app.js"></script>
 </body>
